# Ganymede

./: .gitmodules  CMakeLists.txt  README.md  build.sh  go.sh  go_template.sh
Comparision/: README.md  api.py  install.sh  test_Geminifs.py
Comparision/interface_for_pytorch/: CMakeLists.txt  model_save_example.py  remove.sh  setup.py
Comparision/interface_for_pytorch/Geminifs/: __init__.py  build.sh
Comparision/interface_for_pytorch/Geminifs/_C/: __init__.pyi
Comparision/interface_for_pytorch/cmake-build/: CMakeCache.txt  Makefile
Comparision/interface_for_pytorch/cmake-build/csrc/: Makefile
Comparision/interface_for_pytorch/csrc/: CMakeLists.txt  Makefile  api.cpp  api_gpu.cu  utils.cpp
Comparision/interface_for_pytorch/include/: api.h  api_gpu.cuh  utils.h
Comparision/interface_for_pytorch/interface_for_pytorch/: log.txt  setup.py
Comparision/interface_for_pytorch/interface_for_pytorch/Geminifs/: api.py
Comparision/interface_for_pytorch/interface_for_pytorch/Geminifs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Comparision/interface_for_pytorch/interface_for_pytorch/Geminifs/_C/: __init__.pyi
Comparision/interface_for_pytorch/interface_for_pytorch/cmake-build/: CMakeCache.txt  cmake_install.cmake
Comparision/interface_for_pytorch/interface_for_pytorch/cmake-build/csrc/: Makefile  cmake_install.cmake
Comparision/interface_for_pytorch/interface_for_pytorch/csrc/: api.cpp  api_gpu  api_gpu.cu  build.sh  halo.py
Comparision/interface_for_pytorch/interface_for_pytorch/include/: api.h  api_gpu.cuh
benchmarks/Bam_bench/: bam_test.sh  run_test_IOPS_Throughput.sh  unload_bam.sh
benchmarks/LLM_bench/: Makefile  build.sh  go_train_gpt2.sh  go_train_gpt_gds.sh  train_gpt2.cu  train_gpt2_gds.cu  train_gpt2_gpufs.cu
benchmarks/LLM_bench/scripts/: run_gds_gpt2_124M.sh  run_geminifs_gpt2_124M.sh  run_gpt2_124M.sh  run_gpufs_gpt2_124M.sh  run_native_gpt2_124M.sh
benchmarks/gds_tests/: 01_test_cuFileRead_latency_nthread.cc  02_test_cuFileBatchIOSubmit_latency.cc  03_test_cuFileRead_bandwith.cu  Makefile  README.md  gdsio_test_bandwidth.sh  test.sh  test_cuFileBatchIOSubmit_latency.cc  test_cufileRead_latency.cc  test_gds_latency  test_gds_latency.cc
benchmarks/geminifs_test/: 01_test_read_latency.cu  02_test_write_latency.cu  Makefile
benchmarks/gpufs_test/: 01_test_read_latency.cu  02_test_read_bandwidth.cu  Makefile  README.md  compute_tail_latency.py  test.sh  test_read_latency.cu
benchmarks/test/: CMakeLists.txt  main.cu
benchmarks/test_concurrent/: CMakeLists.txt  geminifs.h  main.cu
benchmarks/test_prp/: CMakeLists.txt  main.cu
benchmarks/test_prp/get-offset/: Makefile  get-offset.c
benchmarks/utils/: compute_avg_bandwidth.py  compute_tail_latency.py  generate_test_file.py
examples/: Makefile  TestForNoBackingPagecache.cu  TestForNvmeBacking.cu  TestForNvmeofstRefining.cu  TestForPageCache.cu
geminiFs/: geminifs.c
kernel_module/: README.md
kernel_module/nvme/host/: Makefile  Module.symvers  core.c  ctrl.c  ctrl.h  map.c  map.h  modules.order  nvfs-core.h  nvfs-p2p.c  nvfs-pci.c  nvfs-pci.h  nvme.h  pci.c  snvme-core.ko  snvme-core.mod  snvme-core.mod.c  snvme.ko  snvme.mod  snvme.mod.c  snvme_help.c  snvme_help.h  trace.h
libgeminiFs_src/: .Makefile.swp  .geminifs_api.h.swp  .geminifs_internal.cuh.swp  Makefile  TestForNoBackingPagecache.cu  TestForNvmeBacking.cu  TestForPageCache.cu  geminifs.c  geminifs.cu  geminifs_api.cuh  geminifs_api.h  geminifs_internal.cuh  geminifs_nvme.cu
linux/: build.sh
linux/fs/: namespace.c  pnode.c
scripts/: Module.symvers  nvme_module_change.sh  nvme_unreg  nvme_unreg.c  nvme_unreg.py  ready_to_bam.sh  ready_to_run.sh  recovery_to_origin.sh
src/: ctrl.cpp  dma.cpp  file.cpp  file.h  lib_ctrl.h  queue.cpp  regs.h  rpc.cpp
src/dis/: device.c
src/include/: buffer.h  ctrl.h  nvm_admin.h  nvm_aq.h  nvm_ctrl.h  nvm_dma.h  nvm_parallel_queue.h  nvm_queue.h  nvm_rpc.h  nvm_types.h  nvm_util.h  queue.h
src/linux/: device.cpp  dma.cpp  ioctl.h  map.h
tools/: README.md
tools/geminiFs/: Makefile  TestForNoBackingPagecache.cu  example_for_nvme_raw_access.cu  geminifs.c  geminifs.cu  geminifs.h  geminifs_internal.cuh  geminifs_nvme.cu
tools/identify/: CMakeLists.txt
tools/integrity/: CMakeLists.txt  integrity.cpp  integrity.h  read.cpp  read.h  transfer.cpp  util.cpp
tools/integrity/get-offset/: get-offset.h
tools/memcpy_test/: Makefile  main.cu
tools/read-blocks/: args.c  args.h  read.h
tools/rpc/: segment.h
tools/snvm_control/: Makefile  snvm_control_test  snvm_control_test.c  snvm_control_test.h
